--- a/src/falcon_dapp_frontend/package.json
+++ b/src/falcon_dapp_frontend/package.json
@@ -15,14 +15,20 @@
     "react-dom": "^18.2.0",
     "@dfinity/agent": "^3.0.0",
     "@dfinity/candid": "^3.0.0",
-    "@dfinity/principal": "^3.0.0"
+    "@dfinity/principal": "^3.0.0",
+    "ethers": "^6.13.5",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.446.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
+    "postcss": "^8.4.38",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3"
