--- a/src/falcon_dapp_frontend/package.json
+++ b/src/falcon_dapp_frontend/package.json
@@ -11,14 +11,15 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dfinity/agent": "^3.0.0",
+    "@dfinity/auth-client": "^3.4.3",
     "@dfinity/candid": "^3.0.0",
-    "@dfinity/principal": "^3.0.0",
+    "@dfinity/principal": "^3.4.3",
     "ethers": "^6.13.5",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.446.0"
+    "lucide-react": "^0.446.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
