--- a/src/falcon_dapp_frontend/package.json
+++ b/src/falcon_dapp_frontend/package.json
@@ -14,11 +14,14 @@
     "@dfinity/agent": "^3.0.0",
     "@dfinity/auth-client": "^3.4.3",
     "@dfinity/candid": "^3.0.0",
+    "@dfinity/ledger-icrc": "^7.1.0",
     "@dfinity/principal": "^3.4.3",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.446.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
